...
    
    private func proceedToNextQuestionOrResults() {
        if self.isLastQuestion() {
            
            let text = self.makeResultsMessage()
            
            self.show(quiz: QuizResultsViewModel(title: "Результаты", text: text, buttonText: "Сыграть ещё раз"))
        } else {
            self.switchToNextQuestion()
            
            questionFactory?.requestNextQuestion()
            viewController?.turnOffHighlighting()
            viewController?.makeButtonsActive()
...
